--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "@supabase/supabase-js": "^2.26.0",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.14",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.1.6"
   }
 }
