--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.15",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
+    "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.3.0",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "^13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/react": "18.2.14",
