--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^2.29.3",
+    "eslint": "^8.44.0",
     "gray-matter": "^4.0.3",
     "next": "^13.4.6",
     "react": "18.2.0",
