--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.44.0",
     "gray-matter": "^4.0.3",
     "next": "^13.4.6",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
