--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.0",
     "date-fns": "^2.29.3",
     "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
     "gray-matter": "^4.0.3",
     "next": "^13.4.6",
     "prettier": "^3.0.0",
