--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.15",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^2.29.3",
