--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .ts --ignore-path .gitignore ."
+    "lint": "eslint --ext .ts --ignore-path .gitignore .",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -15,26 +18,43 @@
     "@heroicons/react": "^2.0.18",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.26.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^2.29.3",
+    "esbuild": "^0.18.13",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "gray-matter": "^4.0.3",
+    "jest-environment-jsdom": "^29.6.1",
+    "jest-html-reporters": "^3.1.4",
     "next": "^13.4.6",
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@types/react": "18.2.14",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.6.1",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.6"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-typescript"
+    ]
   }
 }
